@@ -271,7 +271,7 @@ lgsing:
 /* This is the C99 version */
 double lgamma(double x)
 {
-	int local_sgngam = 0;
+	int local_sgngam = signgam;
 	return (__lgamma_r(x, &local_sgngam));
 }
 
