@@ -1,3 +1,12 @@
+2012-11-20  Kai Tietz  <ktietz@redhat.com>
+
+	* math/signgam.c: New.
+	* Makefile.am: Add math/signgam.c source for build.
+	* Makefile.in: Regenerated.
+	* lgammaf.c: Use signgam.
+	* lgamma.c: Likewise.
+	* lgammal.c: Likewise.
+
 2012-08-17  Corinna Vinschen  <vinschen@redhat.com>
 
 	* configure.ac (sysroot): Set sysroot to $prefix since include is
